# NEXUS-AI

./: .build-trigger  .gitignore  Dockerfile  Evaluation Criteria.txt  README.md  RUN_GUIDE.txt  default.env  inference.py  openenv.yaml  openenv_validator.py  pyproject.toml  setup.bat  setup.sh
backend/: .gitignore  Dockerfile  config.py  main.py  requirements.txt
backend/api/routes/: config_routes.py  model_routes.py  openenv.py  scenario_routes.py  websocket.py
backend/api/schemas/: __init__.py  action.py  observation.py  reward.py  state.py
backend/core/: agent_runner.py  environment.py  episode_manager.py  reward_engine.py  state_manager.py
backend/models/: custom_model.py  hf_client.py  model_manager.py  ollama_client.py
backend/scenarios/: __init__.py  scenario_loader.py
backend/scenarios/graders/: __init__.py  base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py
backend/tools/: tool_registry.py  tool_server.py
backend/tools/tools/: __init__.py  config_checker.py  database_query.py  fix_proposer.py  fix_verifier.py  log_reader.py  restart_service.py  run_diagnostic.py  service_status.py  update_config.py
backend/utils/: embeddings.py  hardware.py  logger.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: AgentTerminal.jsx  DynamicScenarioInjector.jsx  EpisodeEndOverlay.jsx  Layout.jsx  SideNavBar.jsx  TopNavBar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/views/: DashboardView.jsx  SettingsView.jsx  (+1 more)
(+1 files in other folders)
